= Version descriptions

== master

- Resolves: gh#16 support dark mode (martiandolphin)

== 6.2

- Resolves: gh#15 export format is now better documented
- Resolves: gh#14 main view: sleep counter is now less confusing for multiple sleeps / day
- Resolves: gh#13 main view: scroll the content above the recycler view
- Resolves: gh#8 main view: the snackbar and the start/stop button doesn't overlap anymore

== 6.1

- Resolves: gh#11 use different colors for start and stop
- Much improved design (Sanju S)
- Resolves: gh#5 Main view: average of daily sum of sleeps is now visible

== 6.0

- Main view: the sleep list now has a scrollbar
- Sleep view: now shows the ID and has a back button

== 5.0

- Resolves: gh#2 Allow the user to manually edit an entry

== 4.0

- App metadata now features a screenshot
- Added an about dialog to credit used libraries
- Now never performing database operations on the main thread
- Resolves: gh#1 Cannot import csv after export

== 3.0

- Can remember already started (but not yet stopped) sleeps on system restart
- Can show duration of each past sleep
- Can delete past recorded sleeps selectively

== 2.0

- Can import previously exported data
- Notification icon is now in sync with the launcher icon
- Runtime baseline is now only API 22 (Android 5.1), not API 26 to cover about 80% of devices

== 1.0

- Initial release
- Can store past sleeps
- Can count average duration of them