@@ -202,6 +202,8 @@ object DataModel {
     fun getSleepDurationDailyStat(sleeps: List<Sleep>): String {
         // Day -> sum (in seconds) map.
         val sums = HashMap<Long, Long>()
+        var minKey: Long = Long.MAX_VALUE
+        var maxKey: Long = 0
         for (sleep in sleeps) {
             var diff = sleep.stop - sleep.start
             diff /= 1000
@@ -219,6 +221,8 @@ object DataModel {
             val startDay = stopDate.get(Calendar.DAY_OF_MONTH)
             day.set(Calendar.DAY_OF_MONTH, startDay)
             val key = day.timeInMillis
+            minKey = minOf(minKey, key)
+            maxKey = maxOf(maxKey, key)
 
             val sum = sums[key]
             if (sum != null) {
@@ -232,10 +236,16 @@ object DataModel {
         for (value in sums.values) {
             sum += value
         }
-        val count = sums.size
-        return if (count == 0) {
-            ""
-        } else formatDuration(sum / count)
+
+        if (sums.size == 0) {
+            return ""
+        }
+
+        // Now determine the number of covered days. This is usually just the number of keys, but it
+        // can be more, in case a whole 24h period was left out.
+        val msPerDay = 86400 * 1000
+        val count = (maxKey - minKey) / msPerDay + 1
+        return formatDuration(sum / count)
     }
 
     fun formatDuration(seconds: Long): String {
